--- a/index.html
+++ b/index.html
@@ -2,116 +2,112 @@
 <html lang="en">
 
 <head>
-  <!-- meta -->
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <!-- meta -->
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Majid</title>
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+    <title>Majid Alturki</title>
+    <meta content="" name="keywords">
+    <meta content="" name="description">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet">
 
-  <!-- Bootstrap CSS File -->
-  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap CSS File -->
+    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Libraries CSS Files -->
-  <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
-  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="lib/magnific-popup/magnific-popup.css" rel="stylesheet">
-  <link href="lib/hover/hover.min.css" rel="stylesheet">
+    <!-- Libraries CSS Files -->
+    <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="lib/magnific-popup/magnific-popup.css" rel="stylesheet">
+    <link href="lib/hover/hover.min.css" rel="stylesheet">
 
-  <!-- Main Stylesheet File -->
-  <link href="css/style.css" rel="stylesheet">
+    <!-- Main Stylesheet File -->
+    <link href="css/style.css" rel="stylesheet">
 
-  <!-- Responsive css -->
-  <link href="css/responsive.css" rel="stylesheet">
-
-  <!-- Favicon -->
-  <link rel="shortcut icon" href="images/favicon.png">
+    <!-- Responsive css -->
+    <link href="css/responsive.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-  <!-- start section navbar -->
-  <nav id="main-nav">
-    <div class="row">
-      <div class="container">
+    <!-- start section navbar -->
+    <nav id="main-nav">
+        <div class="row">
+            <div class="container">
 
-        <div class="logo">
-          <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+                <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
+
+                <ul class="nav-menu list-unstyled">
+                    <li><a href="#header" class="smoothScroll">Home</a></li>
+                    <li><a href="#about" class="smoothScroll">About</a></li>
+                    <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
+                    <li><a href="#contact" class="smoothScroll">Contact</a></li>
+                </ul>
+
+            </div>
         </div>
-
-        <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
-
-        <ul class="nav-menu list-unstyled">
-          <li><a href="#header" class="smoothScroll">Home</a></li>
-          <li><a href="#about" class="smoothScroll">About</a></li>
-          <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
-          <li><a href="#contact" class="smoothScroll">Contact</a></li>
-        </ul>
-
-      </div>
-    </div>
-  </nav>
-  <!-- End section navbar -->
+    </nav>
+    <!-- End section navbar -->
 
 
-  <!-- start section header -->
-  <div id="header" class="home">
+    <!-- start section header -->
+    <div id="header" class="home">
 
-    <div class="container">
-      <div class="header-content">
-        <h1>I'm <span class="typed"></span></h1>
+        <div class="container">
+            <div class="header-content">
+                <h1>I'm <span class="typed"></span></h1>
 
-        <ul class="list-unstyled list-social">
-          <li><a href="#"><i class="ion-social-github"></i></a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <!-- End section header -->
-
-
-  <!-- start section about me -->
-  <div id="about" class="paddsection">
-    <div class="container">
-      <div class="row justify-content-between">
-
-        <div class="col-lg-7">
-          <div class="about-descr">
-
-            <p class="p-heading">I'm a UX/UI Engineer in training that is passionate about data, human-computer-interaction, linguistics, and design. </p>
-
-          </div>
-
+                <ul class="list-unstyled list-social">
+                    <li><a href="#"><i class="ion-social-github"></i></a></li>
+                </ul>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  <!-- end section about me -->
+    <!-- End section header -->
 
 
-  <!-- section portfolio // work in progress  -->
+    <!-- start section about me -->
+    <div id="about" class="paddsection">
+        <div class="container">
+            <div class="row justify-content-between">
+
+                <div class="col-lg-7">
+                    <div class="about-descr">
+
+                        <p class="p-heading">Majid gruduated from the University of San Francisco, where he majored in Computer Science and minored in Design and Philosophy. Currently, he's at Tradecraft, where he's honing his Product Design skillset. You can find him rambling about: design, philosophy, human-computer-interaction, data, linguistics, banana bread, and the intersection thereof.
+                        <br>    </p>
+                        <p class="p-heading">
+                        He enjoys architecting people's experiences with technology, and making sure these experiences are ethical and inclusive. </p>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end section about me -->
 
 
-  <!-- start section contact -->
+    <!-- section portfolio // work in progress  -->
 
 
-  <!-- JavaScript Libraries -->
-  <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/jquery/jquery-migrate.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="lib/typed/typed.js"></script>
-  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-  <script src="lib/magnific-popup/magnific-popup.min.js"></script>
-  <script src="lib/isotope/isotope.pkgd.min.js"></script>
+    <!-- start section contact -->
 
 
-  <!-- Template Main Javascript File -->
-  <script src="js/main.js"></script>
+    <!-- JavaScript Libraries -->
+    <script src="lib/jquery/jquery.min.js"></script>
+    <script src="lib/jquery/jquery-migrate.min.js"></script>
+    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/typed/typed.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="lib/magnific-popup/magnific-popup.min.js"></script>
+    <script src="lib/isotope/isotope.pkgd.min.js"></script>
+
+
+    <!-- Template Main Javascript File -->
+    <script src="js/main.js"></script>
 
 </body>
 
