--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <div class="container">
             <div class="header-content">
-                <h1>I'm <span class="typed"></span></h1>
+                <h1><span class="typed"></span></h1>
 
                 <ul class="list-unstyled list-social">
                     <li><a href="#"><i class="ion-social-github"></i></a></li>
