--- a/index.html
+++ b/index.html
@@ -1,113 +1,269 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!doctype html>
+<html lang="zxx">
 <head>
-    <!-- meta -->
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Majid Alturki</title>
+<link type="image/x-icon" href="assets/images/favicon.ico" rel="shortcut icon" />
+<meta name="keywords" content="" />
+<meta name="description" content="" />
+<!-- Bootstrap Css -->
+<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+<!-- Font Awesome Css  -->
+<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 
-    <title>Majid Alturki</title>
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+<link rel="stylesheet" href="../use.fontawesome.com/releases/v5.4.1/css/all.css"
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet">
-
-    <!-- Bootstrap CSS File -->
-    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Libraries CSS Files -->
-    <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/magnific-popup/magnific-popup.css" rel="stylesheet">
-    <link href="lib/hover/hover.min.css" rel="stylesheet">
-
-    <!-- Main Stylesheet File -->
-    <link href="css/style.css" rel="stylesheet">
-
-    <!-- Responsive css -->
-    <link href="css/responsive.css" rel="stylesheet">
-
+<!-- Swiper Slider Css  -->
+<link rel="stylesheet" href="assets/css/swiper.min.css" />
+<!-- Magnific Popup Css  -->
+<link rel="stylesheet" href="assets/css/magnific-popup.css">
+<!-- Owl Css -->
+<link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+<link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+<!-- HS Tap -->
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.html">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.html">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.html">
+<link rel="manifest" href="site.html">
+<link rel="mask-icon" href="safari-pinned-tab.html" color="#545454">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+<!-- Custom Css  -->
+<link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="assets/css/responsive.css">
 </head>
 
 <body>
 
-    <!-- start section navbar -->
-    <nav id="main-nav">
-        <div class="row">
-            <div class="container">
+<header id="home" class="h-100">
+	<div class="main_header inner">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col">
+					<div class="logo">
+						<a href="home.html" <class="logo"><h1>[ M A ]</h1></a>
+					</div><!-- logo -->
+				</div><!-- col -->
 
-                <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
+				<div class="col">
+					<div class="menu">
+				    	<a class="open-menu">
+							<span></span>
+							<span></span>
+							<span></span>
+				    	</a>
+					</div><!-- menu -->
 
-                <ul class="nav-menu list-unstyled">
-                    <li><a href="#header" class="smoothScroll">Home</a></li>
-                    <li><a href="#about" class="smoothScroll">About</a></li>
-                    <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
-                    <li><a href="#contact" class="smoothScroll">Contact</a></li>
-                </ul>
+				    <div class="overlay">
+				      <nav class="overlay-menu">
+				        <ul class="smooth_scroll_2">
+				          <!-- <li><a href="#home">Home</a></li> -->
+				          <li><a href="#about">About</a></li>
+				          <li><a href="#resume">Resume</a></li>
+				        </ul>
+				      </nav>
+				      <a class="close-menu"><i class="fa fa-close"></i></a>
+				    </div><!-- overlay -->
+				</div><!-- col -->
+			</div><!-- row -->
+		</div><!-- container -->
+	</div><!-- main_header -->
 
-            </div>
-        </div>
-    </nav>
-    <!-- End section navbar -->
+	<div class="container">
+		<div class="main_text">
+			<br> <br> <br> <br> <br> <br>
+			<h1>Majid Alturki</h1>
+			<h2>Developer | Designer</h2>
+			<p></p> <br> <br> <br> <br>
+			<i class="fas fa-angle-double-down"></i>
+		</div><!-- main_text -->
+	</div><!-- container -->
+</header><!-- header -->
 
+<section id="about" class="grey">
+	<div class="container">
+		<div class="row">
+			<div class="col-12 col-sm-12 col-md-4">
+				<div class="about_img">
+					<img src="assets/images/majid_1.jpeg" alt=""class="img-fluid">
+				</div>
+			</div>
+			<div class="col-12 col-sm-12 col-md-8">
+				<div class="about_info">
+					<h3 class="title">Myself</h3>
 
-    <!-- start section header -->
-    <div id="header" class="home">
+					<blockquote>I am passionate about tech, data, HCI, design and philosophy.</blockquote>
 
-        <div class="container">
-            <div class="header-content">
-                <h1><span class="typed"></span></h1>
+					<p>These passions branched from my background in computer science, which taught me the core principles of problem-solving with code. From here, I was driven to explore product design as a field, where I have been sharpening my design skills and applying my findings towards supplementing my technical skillset.  </p>
 
-                <ul class="list-unstyled list-social">
-                    <li><a href="#"><i class="ion-social-github"></i></a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <!-- End section header -->
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
+<section id="resume">
+	<div class="container">
+		<div class="row">
+			<div class="col-12 col-sm-12 col-md-6">
+				<div class="education">
+					<h3 class="title">Education</h3>
 
-    <!-- start section about me -->
-    <div id="about" class="paddsection">
-        <div class="container">
-            <div class="row justify-content-between">
+					<div class="list">
+						<div class="year">
+							<p>2019</p>
+						</div>
+						<div class="caption">
+							<h4>B.S. in Computer Science</h4>
+							<p>University of San Francisco</p>
+							<p style="font-style:italic">San Francisco, CA</p>
+						</div>
+					</div>
 
-                <div class="col-lg-7">
-                    <div class="about-descr">
+					<div class="list">
+						<div class="year">
+							<p>2017<br></p>
+						</div>
+						<div class="caption">
+							<h4>Summer Sessions, Computer Science</h4>
+							<p> University of California, Berkeley</p>
+							<p style="font-style:italic">Berkeley, CA</p>
+						</div>
+					</div>
 
-                        <p class="p-heading">Majid gruduated from the University of San Francisco, where he majored in Computer Science and minored in Design and Philosophy. Currently, he's at Tradecraft, where he's honing his Product Design skillset. You can find him rambling about: design, philosophy, human-computer-interaction, data, linguistics, banana bread, and the intersection thereof.
-                        <br>    </p>
-                        <p class="p-heading">
-                        He enjoys architecting people's experiences with technology, and making sure these experiences are ethical and inclusive. </p>
+					<div class="list">
+						<div class="year">
+							<p>2012<br></p>
+						</div>
+						<div class="caption">
+							<h4>Summer Institute</h4>
+							<p> Princeton University</p>
+							<p style="font-style:italic">Princeton, NJ</p>
+						</div>
+					</div>
 
-                    </div>
+				</div>
+			</div>
 
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- end section about me -->
+			<div class="col-12 col-sm-12 col-md-6">
+				<div class="exp">
+					<h3 class="title">Experience</h3>
 
+					<div class="list">
+						<div class="year">
+							<p>March 2020 <br>(present)</p>
+						</div>
+						<div class="caption">
+							<h4>Product Designer</h4>
+							<p>Tradecraft</p>
+							<p style="font-style:italic">San Francisco, CA</p>
+						</div>
+					</div>
 
-    <!-- section portfolio // work in progress  -->
+					<div class="list">
+						<div class="year">
+							<p>May 2019<br>(7 months)</p>
+						</div>
+						<div class="caption">
+							<h4>Research Assistant</h4>
+						</div>
+						<div class="year">
+							<p>Jan 2019<br>(4 months)</p>
+						</div>
+						<div class="caption">
+							<h4>Data Visualization <br>Teaching Assistant</h4>
+							<p>University of San Francisco</p>
+							<p style="font-style:italic">San Francisco, CA</p>
+						</div>
+					</div>
 
+					<div class="list pb-adjust">
+						<div class="year">
+							<p>June 2019 <br>(3 months)</p>
+						</div>
+						<div class="caption">
+							<h4>UX Engineer Intern</h4>
+							<p>Kalkul</p>
+							<p style="font-style:italic">Tokyo, Japan</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
-    <!-- start section contact -->
+	</div>
+</section>
 
+<section id="service" class="grey">
+		<div class="container">
+					<div class="services_container">
+					<h3 class="title">Primary Skills</h3>
+					<p>Due to my background in computer science, design and philosophy, I am quick at learning and applying new information. Below are the three main
+						areas that my key strengths lie in, as well as software skills. For a full breakdown, please refer to my LinkedIn or get in
+						touch to view my CV.</p>
+					</div>
+				<div class="row">
+					<div class="service_item">
+						<h2>01</h2>
+						<h3 class="title">User Research</h3>
+						<p>During my time at Kalkul, I learned how to undertake effective user research
+							by applying agile methodologies. I carried out in depth competitive and comparative
+							analysis of the various companies in order to have a solid foundation to start both the design and development process from.</p>
+					</div>
+					<div class="service_item">
+						<h2>02</h2>
+						<h3 class="title">Empathy</h3>
+						<p>I have always been intrigued by the pyschology behind people's problems and behaviours, and I constantly find myself troubleshooting and/or architecting inclusive experiences. This particular
+							interest drove me to explore product design as a field. I want to build products with good design in mind.</p>
+					</div>
+					<div class="service_item">
+						<h2>03</h2>
+						<h3 class="title">Making</h3>
+						<p>Throughout my childhood, I enjoyed disassembling and hacking hardware, crafting, and tinkering with HTML. In college, that enjoyment resurfaced after taking a fabrication class, where I learned how to use everything from a 3D printer to a CNC router. This has helped me in developing succesful hi-fi prototypes and understanding the technicalities behind them. </p>
+					</div>
+				</div>
+		</div>
+</section>
 
-    <!-- JavaScript Libraries -->
-    <script src="lib/jquery/jquery.min.js"></script>
-    <script src="lib/jquery/jquery-migrate.min.js"></script>
-    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/typed/typed.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/magnific-popup/magnific-popup.min.js"></script>
-    <script src="lib/isotope/isotope.pkgd.min.js"></script>
+<footer>
+	<div class="container">
+		<div class="row">
+			<div class="footer_info">
+				<div class="foo_logo">
+					<a href="home.html" <class="foo_logo"><h3>[ MAJID ALTURKI ]</h3></a>
+				</div>
+				<div class="social">
+					<ul>
+						<li><a href="https://www.linkedin.com/in/majid-alturki/"><i class="fab fa-linkedin-in"></i></a></li>
+						<li><a href="https://angel.co/majid-alturki"><i class="fab fa-angellist"></i></a></li>
+						<li><a href="https://github.com/offglitch"><i class="fab fa-github"></i></a></li>
+						<li><a href="https://www.behance.net/majidt"><i class="fab fa-behance"></i></a></li>
+						<li><a href="https://www.last.fm/user/SnookiTooki"><i class="fab fa-lastfm"></i></a></li>
+						<li><a href="https://medium.com/@majidalturki"><i class="fab fa-medium-m"></i></a></li>
 
+					</ul>
+				</div>
+				<div class="copyright"><p>© Majid Alturki majid.cc</p></div>
+			</div>
+		</div><!-- row -->
+	</div><!-- container -->
+</footer><!-- footer -->
 
-    <!-- Template Main Javascript File -->
-    <script src="js/main.js"></script>
+<a href="#home" class="go-top"><i class="fa fa-angle-up"></i></a>
+
+<!-- Jquery Library js  -->
+<script src="assets/js/jquery.js"></script>
+<!-- Bootstrap js  -->
+<script src="assets/js/bootstrap.min.js"></script>
+<!-- Swiper Slider js  -->
+<script src="assets/js/swiper.min.js"></script>
+<!-- Magnific Popup js  -->
+<script src="assets/js/jquery.magnific-popup.js"></script>
+<!-- Owl js  -->
+<script src="assets/js/owl.carousel.js"></script>
+<!-- Custom js  -->
+<script src="assets/js/custom.js"></script>
 
 </body>
 
