--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<div class="about_info">
 					<h3 class="title">Myself</h3>
 
-					<blockquote>I am passionate about tech, data, HCI, design and philosophy.</blockquote>
+					<blockquote>I am passionate about technology, data, HCI, design and philosophy.</blockquote>
 
 					<p>These passions branched from my background in computer science, which taught me the core principles of problem-solving with code. From here, I was driven to explore product design as a field, where I have been sharpening my design skills and applying my findings towards supplementing my technical skillset.  </p>
 
