--- a/index.html
+++ b/index.html
@@ -75,7 +75,18 @@
 			<br> <br> <br> <br> <br> <br>
 			<h1>Majid Alturki</h1>
 			<h2>Developer | Designer</h2>
-			<p></p> <br> <br> <br> <br>
+			<p>				</div>
+				<div class="social">
+					<ul>
+						<li><a href="https://www.linkedin.com/in/majid-alturki/"><i class="fab fa-linkedin-in"></i></a></li>
+						<li><a href="https://angel.co/majid-alturki"><i class="fab fa-angellist"></i></a></li>
+						<li><a href="https://github.com/offglitch"><i class="fab fa-github"></i></a></li>
+						<li><a href="https://www.behance.net/majidt"><i class="fab fa-behance"></i></a></li>
+						<li><a href="https://www.last.fm/user/SnookiTooki"><i class="fab fa-lastfm"></i></a></li>
+						<li><a href="https://medium.com/@majidalturki"><i class="fab fa-medium-m"></i></a></li>
+
+					</ul>
+				</div></p> <br> <br> <br> <br>
 			<i class="fas fa-angle-double-down"></i>
 		</div><!-- main_text -->
 	</div><!-- container -->
@@ -91,7 +102,7 @@
 			</div>
 			<div class="col-12 col-sm-12 col-md-8">
 				<div class="about_info">
-					<h3 class="title">Myself</h3>
+					<h3 class="title">About</h3>
 
 					<blockquote>I am passionate about technology, data, HCI, design and philosophy.</blockquote>
 
