--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				      <nav class="overlay-menu">
 				        <ul class="smooth_scroll_2">
 				          <!-- <li><a href="#home">Home</a></li> -->
-				          <li><a href="#about">About</a></li>
+				          <li><a href="#about">About Me</a></li>
 				          <li><a href="#resume">Resume</a></li>
 				        </ul>
 				      </nav>
@@ -102,11 +102,13 @@
 			</div>
 			<div class="col-12 col-sm-12 col-md-8">
 				<div class="about_info">
-					<h3 class="title">About</h3>
+					<h3 class="title">About Me</h3>
 
-					<blockquote>I am passionate about technology, data, HCI, design and philosophy.</blockquote>
+					<blockquote>I'm Majid, a creative problem-solver that enjoys engineering and designing immersive experiences.</blockquote>
 
-					<p>These passions branched from my background in computer science, which taught me the core principles of problem-solving with code. From here, I was driven to explore product design as a field, where I have been sharpening my design skills and applying my findings towards supplementing my technical skillset.  </p>
+					<p>Passionate about technology, data, human-computer-interaction, design and philosophy. These passions branched from my background in computer science,
+					which taught me the fundamentals of programming along with how to approach abstract mathematics and writing.
+					From there, I was driven to explore product design as a field to supplement my technical skillset.  </p>
 
 				</div>
 			</div>
@@ -194,7 +196,7 @@
 							<p>June 2019 <br>(3 months)</p>
 						</div>
 						<div class="caption">
-							<h4>UX Engineer Intern</h4>
+							<h4>UI/UX Engineer Intern</h4>
 							<p>Kalkul</p>
 							<p style="font-style:italic">Tokyo, Japan</p>
 						</div>
@@ -209,15 +211,14 @@
 <section id="service" class="grey">
 		<div class="container">
 					<div class="services_container">
-					<h3 class="title">Primary Skills</h3>
-					<p>Due to my background in computer science, design and philosophy, I am quick at learning and applying new information. Below are the three main
-						areas that my key strengths lie in, as well as software skills. For a full breakdown, please refer to my LinkedIn or get in
-						touch to view my CV.</p>
+					<h3 class="title">Skills</h3>
+					<p>Due to my multidesciplinary background and adaptable nature, I'm quick at learning and applying new information.
+					 Below, I list the three main areas that my key strengths lie in.</p>
 					</div>
 				<div class="row">
 					<div class="service_item">
 						<h2>01</h2>
-						<h3 class="title">User Research</h3>
+						<h3 class="title">Research</h3>
 						<p>During my time at Kalkul, I learned how to undertake effective user research
 							by applying agile methodologies. I carried out in depth competitive and comparative
 							analysis of the various companies in order to have a solid foundation to start both the design and development process from.</p>
@@ -226,7 +227,7 @@
 						<h2>02</h2>
 						<h3 class="title">Empathy</h3>
 						<p>I have always been intrigued by the pyschology behind people's problems and behaviours, and I constantly find myself troubleshooting and/or architecting inclusive experiences. This particular
-							interest drove me to explore product design as a field. I want to build products with good design in mind.</p>
+							interest drove me to explore product design & engineering as a field. I want to build products with good design in mind.</p>
 					</div>
 					<div class="service_item">
 						<h2>03</h2>
