--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				        <ul class="smooth_scroll_2">
 				          <!-- <li><a href="#home">Home</a></li> -->
 				          <li><a href="#about">About Me</a></li>
-				          <li><a href="#resume">Resume</a></li>
+				          <li><a href="#skills">Skills</a></li>
 				        </ul>
 				      </nav>
 				      <a class="close-menu"><i class="fa fa-close"></i></a>
@@ -75,7 +75,7 @@
 			<br> <br> <br> <br> <br> <br>
 			<h1>Majid Alturki</h1>
 			<h2>Developer | Designer</h2>
-			<p>				</div>
+			<p>				
 				<div class="social">
 					<ul>
 						<li><a href="https://www.linkedin.com/in/majid-alturki/"><i class="fab fa-linkedin-in"></i></a></li>
@@ -86,8 +86,9 @@
 						<li><a href="https://medium.com/@majidalturki"><i class="fab fa-medium-m"></i></a></li>
 
 					</ul>
-				</div></p> <br> <br> <br> <br>
-			<i class="fas fa-angle-double-down"></i>
+				</div>
+				</p> <br> <br> <br> <br>
+			<a href="#about"><i class="fad fa-angle-double-down"></i></a>
 		</div><!-- main_text -->
 	</div><!-- container -->
 </header><!-- header -->
@@ -116,7 +117,7 @@
 	</div>
 </section>
 
-<section id="resume">
+<section id="skills">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-sm-12 col-md-6">
