--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					</ul>
 				</div>
 				</p> <br> <br> <br> <br>
-			<a href="#about"><i class="fad fa-angle-double-down"></i></a>
+			<a href="#about"><i class="fas fa-angle-double-down"></i></a>
 		</div><!-- main_text -->
 	</div><!-- container -->
 </header><!-- header -->
