--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 					<blockquote>I'm Majid, a creative problem-solver that enjoys engineering and designing immersive experiences.</blockquote>
 
-					<p>Passionate about technology, data, human-computer-interaction, design and philosophy. These passions branched from my background in computer science,
+					<p>Passionate about mixed reality, data, human-computer-interaction, design and philosophy. These passions branched from my background in computer science,
 					which taught me the fundamentals of programming along with how to approach abstract mathematics and writing.
 					From there, I was driven to explore product design as a field to supplement my technical skillset.  </p>
 
@@ -166,7 +166,7 @@
 
 					<div class="list">
 						<div class="year">
-							<p>March 2020 <br>(present)</p>
+							<p>March 2020 <br>(3 months)</p>
 						</div>
 						<div class="caption">
 							<h4>Product Designer</h4>
